--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <script>
   // ---- 更新成你最新部署的 Web App /exec URL ----
-  const SCRIPT_URL = 'https://https://script.google.com/macros/s/AKfycbxUwUKEzx4-ABz0mxNDKnYZ3XIutXmuLkuss5Vl4Sr1OuSv3GQy6XeOJLB5paOXkf5I/exec';
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxUwUKEzx4-ABz0mxNDKnYZ3XIutXmuLkuss5Vl4Sr1OuSv3GQy6XeOJLB5paOXkf5I/exec';
 
   const $ = (id) => document.getElementById(id);
 
