--- a/index.html
+++ b/index.html
@@ -1,198 +1,157 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Fancy Pony – Art Submission</title>
-
-<!-- MAINTAIN: Base styles for simple, readable form -->
-<style>
-  body { font-family: Arial, sans-serif; margin: 2rem; background: #fafafa; }
-  h1 { color: #333; }
-  form { background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-  label { display: block; margin-top: .5rem; }
-  input[type="text"], input[type="email"], input[type="file"], textarea {
-    width: 100%; padding: .5rem; margin-top: .2rem; border: 1px solid #ccc; border-radius: 4px;
-  }
-  input[type="checkbox"] { width: auto; margin-right: .5rem; vertical-align: middle; }
-  button { margin-top: 1rem; padding: .6rem 1rem; background: #4CAF50; color: #fff; border: 0; border-radius: 4px; cursor: pointer; }
-  button:hover { background: #45a049; }
-  #status { margin-top: 1rem; }
-  .success { padding:8px 10px; border:1px solid #e5e7eb; border-radius:8px; display:inline-block; margin-bottom:6px; background:#f0fff0; }
-  .highlight { background:#ffec99; transition: background-color 1s ease; }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Fancy Pony</title>
+  <style>
+    :root { --w: 720px; --bd:#e5e7eb; --fg:#111827; --muted:#6b7280; --accent:#111827; }
+    * { box-sizing: border-box; }
+    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); margin:0; }
+    .wrap { max-width: var(--w); margin: 40px auto; padding: 0 16px; }
+    .card { border:1px solid var(--bd); border-radius:16px; padding:20px; box-shadow:0 1px 3px rgba(0,0,0,.04); }
+    h1 { margin:0 0 12px; font-size:28px; letter-spacing:.2px; }
+    .sub { color:var(--muted); margin:0 0 16px; }
+    .row { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
+    label { display:block; margin:12px 0 6px; font-weight:600; }
+    input[type=text], input[type=email], textarea { width:100%; padding:10px; border:1px solid var(--bd); border-radius:10px; font:inherit; }
+    input[type=file]{ margin:8px 0 12px; }
+    textarea { resize: vertical; }
+    .muted { color:var(--muted); font-size:13px; }
+    .actions { display:flex; flex-wrap:wrap; gap:10px; margin-top:14px; }
+    button, .btn { appearance:none; border:1px solid var(--bd); background:#fff; color:var(--fg); padding:10px 16px; border-radius:10px; cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px; }
+    button.primary { background:var(--accent); color:#fff; border-color:var(--accent); }
+    .status { margin-top:12px; min-height:22px; }
+    .badge { display:inline-block; padding:2px 8px; border:1px solid var(--bd); border-radius:999px; font-size:12px; color:var(--muted); }
+    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
+    code.small { background:#f9fafb; border:1px solid var(--bd); padding:2px 6px; border-radius:6px; font-size:12px; }
+  </style>
 </head>
-
 <body>
-  <!-- MAINTAIN: Page heading -->
-  <h1>Fancy Pony – Art Submission</h1>
-  <p>Please fill in the form below to submit your artwork. If you provide your email, we will send a confirmation message.</p>
+  <div class="wrap">
+    <div class="card" role="region" aria-label="Fancy Pony Submission">
+      <h1>Fancy Pony</h1>
+      <p class="sub">Artwork Submission</p>
+      <p><span id="count" class="badge">Loading total…</span></p>
 
-  <!-- MAINTAIN: Upload form -->
-  <form id="uploadForm" novalidate>
-    <label for="name">Your Name:</label>
-    <input id="name" name="name" type="text" required />
+      <form id="form" novalidate>
+        <div class="row">
+          <div>
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" required />
+          </div>
+          <div>
+            <label for="class">Class</label>
+            <input id="class" name="class" type="text" required />
+          </div>
+        </div>
 
-    <label for="class">Class:</label>
-    <input id="class" name="class" type="text" required />
+        <label for="title">Title</label>
+        <input id="title" name="title" type="text" required />
 
-    <label for="title">Artwork Title:</label>
-    <input id="title" name="title" type="text" />
+        <label for="description">Description</label>
+        <textarea id="description" name="description" rows="4" placeholder="Optional notes about the artwork…"></textarea>
 
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" rows="4"></textarea>
+        <label for="email">Email (optional)</label>
+        <input id="email" name="email" type="email" inputmode="email" autocomplete="email" />
 
-    <label for="email">Email (for confirmation):</label>
-    <input id="email" name="email" type="email" />
+        <label for="file">File (JPG/PNG/PDF)</label>
+        <input id="file" name="file" type="file" accept="image/*,application/pdf" required />
 
-    <label for="file">Choose File (JPG / PNG / PDF) – Please scan at 150–300 ppi:</label>
-    <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+        <label class="muted"><input id="consent" name="consent" type="checkbox" value="true" required />
+          I consent to submit this work for school collection and internal display.</label>
 
-    <label>
-      <input id="consent" name="consent" type="checkbox" value="true" required />
-      I confirm that I have the rights to submit this work.
-    </label>
+        <div class="actions">
+          <button class="primary" type="submit">Submit</button>
+          <a id="btnCsv" class="btn" href="#" role="button">Download CSV</a>
+          <button type="button" class="btn" id="btnRefresh">Refresh total</button>
+        </div>
+        <div id="status" class="status" aria-live="polite"></div>
 
-    <button type="submit">Submit</button>
-  </form>
-
-  <!-- MAINTAIN: Status + live count -->
-  <div id="status" aria-live="polite"></div>
-  <div style="margin-top:.5rem;">
-    <strong>Total submissions:</strong> <span id="count">Loading...</span>
+        <p class="muted">API URL: <code class="small" id="apiEcho"></code></p>
+      </form>
+    </div>
   </div>
 
-<!-- MAINTAIN: Script - uploader with multipart first + base64 fallback -->
-<script>
-  // ← 換成你最新部署的 Web App /exec URL
-  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
+  <script>
+    // ---- SET THIS to your exact Web App /exec URL ----
+    const API = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec'.trim();
+    document.getElementById('apiEcho').textContent = API;
 
-  // MAINTAIN: Shorthand for element lookup
-  const $ = (id) => document.getElementById(id);
+    const $ = id => document.getElementById(id);
 
-  // MAINTAIN: Display total count from doGet?action=count
-  async function refreshCount(){
-    const el = $('count');
-    try{
-      const r = await fetch(SCRIPT_URL + '?action=count', { cache: 'no-store' });
-      const txt = await r.text();
-      const j = JSON.parse(txt);
-      console.log('count check =>', j);
-      if (j.ok) {
-        el.textContent = j.count ?? 0;
-        el.classList.add('highlight');
-        setTimeout(()=>el.classList.remove('highlight'), 900);
-      } else {
-        el.textContent = 'Error';
-        console.error('count error =>', j.error);
-      }
-    }catch(e){
-      el.textContent = 'Error';
-      console.error('count fetch failed =>', e);
+    // Convert a File to base64 (without the "data:*;base64," prefix)
+    function fileToBase64(file){
+      return new Promise((resolve, reject)=>{
+        const fr = new FileReader();
+        fr.onload = () => {
+          const s = String(fr.result || '');
+          const idx = s.indexOf('base64,');
+          resolve(idx >= 0 ? s.slice(idx + 7) : s);
+        };
+        fr.onerror = () => reject(fr.error || new Error('File read error'));
+        fr.readAsDataURL(file);
+      });
     }
-  }
 
-  // MAINTAIN: Try primary upload via multipart/form-data (Apps Script may parse e.files)
-  async function uploadMultipart(file){
-    const fd = new FormData();
-    fd.append('name', $('name').value.trim());
-    fd.append('class', $('class').value.trim());
-    fd.append('title', $('title').value.trim());
-    fd.append('description', $('description').value.trim());
-    fd.append('email', $('email').value.trim());
-    fd.append('consent', $('consent').checked ? 'true' : 'false');
-    fd.append('file', file, file.name); // 關鍵：欄位名必須為 "file"
+    async function refreshCount(){
+      const badge = $('count');
+      try{
+        const r = await fetch(API + '?action=count', { cache: 'no-store' });
+        const text = await r.text();
+        const j = JSON.parse(text);
+        badge.textContent = `Total submissions: ${j.count ?? 0}`;
+      }catch(e){
+        badge.textContent = 'Total submissions: (failed to load)';
+        console.error('Count error:', e);
+      }
+    }
 
-    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // 不要自訂 headers
-    const txt = await r.text();
-    console.log('raw response (multipart):', txt);
-    let data;
-    try { data = JSON.parse(txt); } catch { throw new Error('Invalid JSON from server (multipart)'); }
-    return data;
-  }
+    $('btnRefresh').addEventListener('click', refreshCount);
+    $('btnCsv').addEventListener('click', (e)=>{ e.preventDefault(); window.open(API + '?action=csv', '_blank'); });
 
-  // MAINTAIN: Fallback upload via base64 + x-www-form-urlencoded (Apps Script 永遠可解析)
-  async function uploadBase64(file){
-    const fileAsBase64 = await new Promise((resolve, reject)=>{
-      const fr = new FileReader();
-      fr.onerror = () => reject(new Error('FileReader failed'));
-      fr.onload = () => {
-        const s = String(fr.result);
-        const base64 = s.includes('base64,') ? s.split('base64,')[1] : s;
-        resolve(base64);
-      };
-      fr.readAsDataURL(file);
+    $('form').addEventListener('submit', async (e)=>{
+      e.preventDefault();
+      const status = $('status');
+      const file = $('file').files[0];
+      if (!file) { status.textContent = 'Please choose a file.'; return; }
+
+      status.textContent = 'Preparing upload…';
+      try{
+        // Build multipart with text fields + base64 file fields
+        const fd = new FormData();
+        fd.append('name', $('name').value.trim());
+        fd.append('class', $('class').value.trim());
+        fd.append('title', $('title').value.trim());
+        fd.append('description', $('description').value.trim());
+        fd.append('email', $('email').value.trim());
+        fd.append('consent', $('consent').checked ? 'true' : 'false');
+
+        const b64 = await fileToBase64(file);
+        fd.append('filebase64', b64);
+        fd.append('mimetype', file.type || 'application/octet-stream');
+        fd.append('filename', file.name || 'upload.bin');
+
+        status.textContent = 'Uploading…';
+        const r = await fetch(API, { method:'POST', body: fd }); // no custom headers
+        const text = await r.text();
+        let data;
+        try { data = JSON.parse(text); } catch { throw new Error('Non-JSON response:\n' + text.slice(0,200)); }
+
+        if (data.ok){
+          status.innerHTML = 'Uploaded. File link: <a target="_blank" rel="noopener" href="' + data.fileUrl + '">Open</a>';
+          e.target.reset();
+          await refreshCount();
+        } else {
+          status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
+        }
+      } catch(err){
+        status.textContent = 'Upload failed: ' + err.message;
+        console.error('POST error:', err);
+      }
     });
 
-    const body = new URLSearchParams();
-    body.set('name', $('name').value.trim());
-    body.set('class', $('class').value.trim());
-    body.set('title', $('title').value.trim());
-    body.set('description', $('description').value.trim());
-    body.set('email', $('email').value.trim());
-    body.set('consent', $('consent').checked ? 'true' : 'false');
-    body.set('filebase64', fileAsBase64);
-    body.set('mimetype', file.type || 'application/octet-stream');
-    body.set('filename', file.name || 'upload.bin');
-
-    const r = await fetch(SCRIPT_URL, {
-      method:'POST',
-      headers: { 'Content-Type':'application/x-www-form-urlencoded;charset=UTF-8' },
-      body: body.toString()
-    });
-    const txt = await r.text();
-    console.log('raw response (base64):', txt);
-    let data;
-    try { data = JSON.parse(txt); } catch { throw new Error('Invalid JSON from server (base64)'); }
-    return data;
-  }
-
-  // MAINTAIN: Render success UI
-  function renderSuccess(statusEl, data){
-    const line = data.emailSent
-      ? 'You have successfully uploaded. A confirmation email has been sent.'
-      : 'You have successfully uploaded.' + (data.emailError ? ' (Email could not be sent.)' : '');
-    statusEl.innerHTML =
-      `<div class="success">${line}</div>
-       <div>File link: <a target="_blank" rel="noopener" href="${data.fileUrl}">Open</a></div>
-       <div><small>Version: ${data.version || 'N/A'}, Marker: ${data.marker || 'N/A'}</small></div>`;
-  }
-
-  // MAINTAIN: Submit handler (multipart first, fallback to base64 if needed)
-  $('uploadForm').addEventListener('submit', async (e)=>{
-    e.preventDefault();
-    const status = $('status');
-    status.textContent = 'Preparing upload…';
-
-    const file = $('file').files[0];
-    if (!file){ status.textContent = 'Please choose a file.'; return; }
-
-    try{
-      status.textContent = 'Uploading (multipart)…';
-      let data = await uploadMultipart(file);
-
-      // 若 multipart 回傳 ok:false（常見於 Apps Script 無法解析 e.files），則啟用後援
-      if (!data || data.ok === false) {
-        console.warn('Multipart failed or returned ok:false =>', data);
-        status.textContent = 'Retrying with a compatible uploader…';
-        data = await uploadBase64(file);
-      }
-
-      if (data.ok){
-        renderSuccess(status, data);
-        e.target.reset();
-        await refreshCount();
-      } else {
-        status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
-      }
-    }catch(err){
-      status.textContent = 'Error: ' + err.message;
-      console.error(err);
-    }
-  });
-
-  // MAINTAIN: Initialize live count
-  refreshCount();
-</script>
+    refreshCount();
+  </script>
 </body>
 </html>
