--- a/index.html
+++ b/index.html
@@ -1,157 +1,171 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fancy Pony</title>
-  <style>
-    :root { --w: 720px; --bd:#e5e7eb; --fg:#111827; --muted:#6b7280; --accent:#111827; }
-    * { box-sizing: border-box; }
-    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); margin:0; }
-    .wrap { max-width: var(--w); margin: 40px auto; padding: 0 16px; }
-    .card { border:1px solid var(--bd); border-radius:16px; padding:20px; box-shadow:0 1px 3px rgba(0,0,0,.04); }
-    h1 { margin:0 0 12px; font-size:28px; letter-spacing:.2px; }
-    .sub { color:var(--muted); margin:0 0 16px; }
-    .row { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
-    label { display:block; margin:12px 0 6px; font-weight:600; }
-    input[type=text], input[type=email], textarea { width:100%; padding:10px; border:1px solid var(--bd); border-radius:10px; font:inherit; }
-    input[type=file]{ margin:8px 0 12px; }
-    textarea { resize: vertical; }
-    .muted { color:var(--muted); font-size:13px; }
-    .actions { display:flex; flex-wrap:wrap; gap:10px; margin-top:14px; }
-    button, .btn { appearance:none; border:1px solid var(--bd); background:#fff; color:var(--fg); padding:10px 16px; border-radius:10px; cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px; }
-    button.primary { background:var(--accent); color:#fff; border-color:var(--accent); }
-    .status { margin-top:12px; min-height:22px; }
-    .badge { display:inline-block; padding:2px 8px; border:1px solid var(--bd); border-radius:999px; font-size:12px; color:var(--muted); }
-    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
-    code.small { background:#f9fafb; border:1px solid var(--bd); padding:2px 6px; border-radius:6px; font-size:12px; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Fancy Pony – Art Submission</title>
+<style>
+  :root { color-scheme: light; }
+  body { font-family: Arial, sans-serif; margin: 2rem; background: #fafafa; }
+  h1 { color: #333; margin-bottom: .5rem; }
+  p.help { color:#555; margin-top:0; }
+  form { background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+  label { display: block; margin-top: .5rem; font-weight: 600; }
+  input[type="text"], input[type="email"], input[type="file"], textarea {
+    width: 100%; padding: .55rem; margin-top: .25rem; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;
+  }
+  textarea { resize: vertical; }
+  .row { display:grid; grid-template-columns: 1fr 1fr; gap: .75rem; }
+  .row > div { display:block; }
+  .checkbox { display:flex; align-items:center; gap:.5rem; margin-top:.75rem; }
+  button { margin-top: 1rem; padding: .7rem 1.1rem; background: #2563eb; color: #fff; border: 0; border-radius: 6px; cursor: pointer; font-weight:600; }
+  button:hover { filter: brightness(1.05); }
+  #status { margin-top: 1rem; min-height:1.4rem; }
+  .note { color:#6b7280; font-size:12px; }
+  .success { padding:10px 12px; border:1px solid #e5e7eb; border-radius:8px; display:inline-block; margin:.5rem 0; background:#f0fff4; }
+  .error { padding:10px 12px; border:1px solid #fecaca; border-radius:8px; display:inline-block; margin:.5rem 0; background:#fff1f2; color:#b91c1c; }
+  .muted { color:#6b7280; font-size:12px; }
+  .highlight { background:#ffec99; transition: background-color 900ms ease; }
+  .meta { margin-top:.5rem; font-size:12px; color:#6b7280; }
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card" role="region" aria-label="Fancy Pony Submission">
-      <h1>Fancy Pony</h1>
-      <p class="sub">Artwork Submission</p>
-      <p><span id="count" class="badge">Loading total…</span></p>
+  <h1>Fancy Pony – Art Submission</h1>
+  <p class="help">Please fill in the form to submit your artwork. Choose a JPG/PNG/PDF file. <span class="muted">Tip: Scan at 150–300 ppi for best results.</span></p>
 
-      <form id="form" novalidate>
-        <div class="row">
-          <div>
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text" required />
-          </div>
-          <div>
-            <label for="class">Class</label>
-            <input id="class" name="class" type="text" required />
-          </div>
-        </div>
-
-        <label for="title">Title</label>
-        <input id="title" name="title" type="text" required />
-
-        <label for="description">Description</label>
-        <textarea id="description" name="description" rows="4" placeholder="Optional notes about the artwork…"></textarea>
-
-        <label for="email">Email (optional)</label>
-        <input id="email" name="email" type="email" inputmode="email" autocomplete="email" />
-
-        <label for="file">File (JPG/PNG/PDF)</label>
-        <input id="file" name="file" type="file" accept="image/*,application/pdf" required />
-
-        <label class="muted"><input id="consent" name="consent" type="checkbox" value="true" required />
-          I consent to submit this work for school collection and internal display.</label>
-
-        <div class="actions">
-          <button class="primary" type="submit">Submit</button>
-          <a id="btnCsv" class="btn" href="#" role="button">Download CSV</a>
-          <button type="button" class="btn" id="btnRefresh">Refresh total</button>
-        </div>
-        <div id="status" class="status" aria-live="polite"></div>
-
-        <p class="muted">API URL: <code class="small" id="apiEcho"></code></p>
-      </form>
+  <form id="uploadForm" novalidate>
+    <div class="row">
+      <div>
+        <label for="name">Your Name</label>
+        <input id="name" name="name" type="text" required />
+      </div>
+      <div>
+        <label for="class">Class</label>
+        <input id="class" name="class" type="text" required />
+      </div>
     </div>
+
+    <div class="row">
+      <div>
+        <label for="title">Artwork Title</label>
+        <input id="title" name="title" type="text" />
+      </div>
+      <div>
+        <label for="email">Email <span class="muted">(optional)</span></label>
+        <input id="email" name="email" type="email" />
+      </div>
+    </div>
+
+    <label for="description">Description</label>
+    <textarea id="description" name="description" rows="4"></textarea>
+
+    <label for="file">Choose File (JPG / PNG / PDF)</label>
+    <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+    <div class="note">Please scan at 150–300 ppi before uploading.</div>
+
+    <div class="checkbox">
+      <input id="consent" name="consent" type="checkbox" value="true" required />
+      <label for="consent" style="margin:0;font-weight:400;">I confirm that I have the rights to submit this work.</label>
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
+
+  <div id="status"></div>
+
+  <div style="margin-top:.75rem;">
+    <strong>Total submissions:</strong> <span id="count">Loading...</span>
+    <div class="meta" id="versionMeta"></div>
   </div>
 
-  <script>
-    // ---- SET THIS to your exact Web App /exec URL ----
-    const API = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec'.trim();
-    document.getElementById('apiEcho').textContent = API;
+<script>
+  // Use your latest Web App URL (exec):
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
 
-    const $ = id => document.getElementById(id);
+  const $ = (id) => document.getElementById(id);
 
-    // Convert a File to base64 (without the "data:*;base64," prefix)
-    function fileToBase64(file){
-      return new Promise((resolve, reject)=>{
-        const fr = new FileReader();
-        fr.onload = () => {
-          const s = String(fr.result || '');
-          const idx = s.indexOf('base64,');
-          resolve(idx >= 0 ? s.slice(idx + 7) : s);
-        };
-        fr.onerror = () => reject(fr.error || new Error('File read error'));
-        fr.readAsDataURL(file);
-      });
-    }
-
-    async function refreshCount(){
-      const badge = $('count');
-      try{
-        const r = await fetch(API + '?action=count', { cache: 'no-store' });
-        const text = await r.text();
-        const j = JSON.parse(text);
-        badge.textContent = `Total submissions: ${j.count ?? 0}`;
-      }catch(e){
-        badge.textContent = 'Total submissions: (failed to load)';
-        console.error('Count error:', e);
-      }
-    }
-
-    $('btnRefresh').addEventListener('click', refreshCount);
-    $('btnCsv').addEventListener('click', (e)=>{ e.preventDefault(); window.open(API + '?action=csv', '_blank'); });
-
-    $('form').addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      const status = $('status');
-      const file = $('file').files[0];
-      if (!file) { status.textContent = 'Please choose a file.'; return; }
-
-      status.textContent = 'Preparing upload…';
-      try{
-        // Build multipart with text fields + base64 file fields
-        const fd = new FormData();
-        fd.append('name', $('name').value.trim());
-        fd.append('class', $('class').value.trim());
-        fd.append('title', $('title').value.trim());
-        fd.append('description', $('description').value.trim());
-        fd.append('email', $('email').value.trim());
-        fd.append('consent', $('consent').checked ? 'true' : 'false');
-
-        const b64 = await fileToBase64(file);
-        fd.append('filebase64', b64);
-        fd.append('mimetype', file.type || 'application/octet-stream');
-        fd.append('filename', file.name || 'upload.bin');
-
-        status.textContent = 'Uploading…';
-        const r = await fetch(API, { method:'POST', body: fd }); // no custom headers
-        const text = await r.text();
-        let data;
-        try { data = JSON.parse(text); } catch { throw new Error('Non-JSON response:\n' + text.slice(0,200)); }
-
-        if (data.ok){
-          status.innerHTML = 'Uploaded. File link: <a target="_blank" rel="noopener" href="' + data.fileUrl + '">Open</a>';
-          e.target.reset();
-          await refreshCount();
-        } else {
-          status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
+  async function refreshCount(){
+    const el = $('count');
+    const meta = $('versionMeta');
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=count', { cache: 'no-store' });
+      const txt = await r.text();
+      const j = JSON.parse(txt);
+      console.log('count check =>', j);
+      if (j.ok) {
+        el.textContent = j.count ?? 0;
+        el.classList.add('highlight');
+        setTimeout(()=>el.classList.remove('highlight'), 900);
+        if (j.version || j.marker) {
+          meta.textContent = `Backend: ${j.version || 'n/a'} (${j.marker || 'n/a'})`;
         }
-      } catch(err){
-        status.textContent = 'Upload failed: ' + err.message;
-        console.error('POST error:', err);
+      } else {
+        el.textContent = 'Error';
+        meta.textContent = '';
+        console.error('count error =>', j.error);
       }
-    });
+    }catch(e){
+      el.textContent = 'Error';
+      console.error('count fetch failed =>', e);
+    }
+  }
 
-    refreshCount();
-  </script>
+  $('uploadForm').addEventListener('submit', async (e)=>{
+    e.preventDefault();
+    const status = $('status');
+    status.textContent = 'Preparing upload…';
+
+    const fileInput = $('file');
+    const file = fileInput.files[0];
+    if (!file){ status.innerHTML = '<div class="error">Please choose a file.</div>'; return; }
+
+    try{
+      // Optional quick size check (e.g., 50MB Apps Script limit-ish)
+      if (file.size > 45 * 1024 * 1024) {
+        status.innerHTML = '<div class="error">File is too large. Please upload a file under ~45MB.</div>';
+        return;
+      }
+
+      const fd = new FormData();
+      fd.append('name', $('name').value.trim());
+      fd.append('class', $('class').value.trim());
+      fd.append('title', $('title').value.trim());
+      fd.append('description', $('description').value.trim());
+      fd.append('email', $('email').value.trim());
+      fd.append('consent', $('consent').checked ? 'true' : 'false');
+      // IMPORTANT: field name must be exactly 'file'
+      fd.append('file', file, file.name);
+
+      // Debug (optional): see what we are sending
+      // for (const [k,v] of fd.entries()) console.log('FD:', k, v);
+
+      status.textContent = 'Uploading…';
+      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // do NOT set custom headers
+      const txt = await r.text();
+      console.log('raw response:', txt);
+      let data;
+      try { data = JSON.parse(txt); } catch { throw new Error('Server returned non-JSON response'); }
+      console.log('server response:', data);
+
+      if (data.ok){
+        const link = data.fileUrl ? `<div>File link: <a target="_blank" rel="noopener" href="${data.fileUrl}">Open</a></div>` : '';
+        status.innerHTML =
+          `<div class="success">Upload successful.</div>${link}`;
+        e.target.reset();
+        await refreshCount();
+        $('name').focus();
+      }else{
+        const diag = data.diag ? `<pre class="muted" style="white-space:pre-wrap;">${JSON.stringify(data.diag,null,2)}</pre>` : '';
+        status.innerHTML = `<div class="error">Upload failed: ${data.error || 'Unknown error'}</div>${diag}`;
+      }
+    }catch(err){
+      status.innerHTML = `<div class="error">Error: ${err.message}</div>`;
+      console.error(err);
+    }
+  });
+
+  // initial load
+  refreshCount();
+</script>
 </body>
 </html>
