--- a/index.html
+++ b/index.html
@@ -3,169 +3,62 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Fancy Pony – Art Submission</title>
+<title>Fancy Pony – Minimal Upload</title>
 <style>
-  :root { color-scheme: light; }
   body { font-family: Arial, sans-serif; margin: 2rem; background: #fafafa; }
-  h1 { color: #333; margin-bottom: .5rem; }
-  p.help { color:#555; margin-top:0; }
-  form { background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-  label { display: block; margin-top: .5rem; font-weight: 600; }
-  input[type="text"], input[type="email"], input[type="file"], textarea {
-    width: 100%; padding: .55rem; margin-top: .25rem; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;
-  }
-  textarea { resize: vertical; }
-  .row { display:grid; grid-template-columns: 1fr 1fr; gap: .75rem; }
-  .row > div { display:block; }
-  .checkbox { display:flex; align-items:center; gap:.5rem; margin-top:.75rem; }
-  button { margin-top: 1rem; padding: .7rem 1.1rem; background: #2563eb; color: #fff; border: 0; border-radius: 6px; cursor: pointer; font-weight:600; }
-  button:hover { filter: brightness(1.05); }
-  #status { margin-top: 1rem; min-height:1.4rem; }
-  .note { color:#6b7280; font-size:12px; }
-  .success { padding:10px 12px; border:1px solid #e5e7eb; border-radius:8px; display:inline-block; margin:.5rem 0; background:#f0fff4; }
-  .error { padding:10px 12px; border:1px solid #fecaca; border-radius:8px; display:inline-block; margin:.5rem 0; background:#fff1f2; color:#b91c1c; }
-  .muted { color:#6b7280; font-size:12px; }
-  .highlight { background:#ffec99; transition: background-color 900ms ease; }
-  .meta { margin-top:.5rem; font-size:12px; color:#6b7280; }
+  form { background:#fff; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,.1); max-width:520px; }
+  label { display:block; margin-top:.5rem; }
+  input[type="text"], input[type="file"] { width:100%; padding:.55rem; margin-top:.25rem; border:1px solid #ccc; border-radius:6px; }
+  button { margin-top:1rem; padding:.7rem 1.1rem; background:#2563eb; color:#fff; border:0; border-radius:6px; cursor:pointer; }
+  .msg { margin-top:1rem; }
 </style>
 </head>
 <body>
-  <h1>Fancy Pony – Art Submission</h1>
-  <p class="help">Please fill in the form to submit your artwork. Choose a JPG/PNG/PDF file. <span class="muted">Tip: Scan at 150–300 ppi for best results.</span></p>
+  <h1>Fancy Pony – Minimal Upload</h1>
+  <form id="f" novalidate>
+    <label for="name">Your Name</label>
+    <input id="name" name="name" type="text" required />
 
-  <form id="uploadForm" novalidate>
-    <div class="row">
-      <div>
-        <label for="name">Your Name</label>
-        <input id="name" name="name" type="text" required />
-      </div>
-      <div>
-        <label for="class">Class</label>
-        <input id="class" name="class" type="text" required />
-      </div>
-    </div>
-
-    <div class="row">
-      <div>
-        <label for="title">Artwork Title</label>
-        <input id="title" name="title" type="text" />
-      </div>
-      <div>
-        <label for="email">Email <span class="muted">(optional)</span></label>
-        <input id="email" name="email" type="email" />
-      </div>
-    </div>
-
-    <label for="description">Description</label>
-    <textarea id="description" name="description" rows="4"></textarea>
-
-    <label for="file">Choose File (JPG / PNG / PDF)</label>
+    <label for="file">Choose File (JPG/PNG/PDF)</label>
     <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
-    <div class="note">Please scan at 150–300 ppi before uploading.</div>
 
-    <div class="checkbox">
-      <input id="consent" name="consent" type="checkbox" value="true" required />
-      <label for="consent" style="margin:0;font-weight:400;">I confirm that I have the rights to submit this work.</label>
-    </div>
-
-    <button type="submit">Submit</button>
+    <button type="submit">Upload</button>
   </form>
-
-  <div id="status"></div>
-
-  <div style="margin-top:.75rem;">
-    <strong>Total submissions:</strong> <span id="count">Loading...</span>
-    <div class="meta" id="versionMeta"></div>
-  </div>
+  <div class="msg" id="msg"></div>
 
 <script>
-  // Use your latest Web App URL (exec):
-  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec'; // ← paste your latest /exec here
 
-  const $ = (id) => document.getElementById(id);
-
-  async function refreshCount(){
-    const el = $('count');
-    const meta = $('versionMeta');
-    try{
-      const r = await fetch(SCRIPT_URL + '?action=count', { cache: 'no-store' });
-      const txt = await r.text();
-      const j = JSON.parse(txt);
-      console.log('count check =>', j);
-      if (j.ok) {
-        el.textContent = j.count ?? 0;
-        el.classList.add('highlight');
-        setTimeout(()=>el.classList.remove('highlight'), 900);
-        if (j.version || j.marker) {
-          meta.textContent = `Backend: ${j.version || 'n/a'} (${j.marker || 'n/a'})`;
-        }
-      } else {
-        el.textContent = 'Error';
-        meta.textContent = '';
-        console.error('count error =>', j.error);
-      }
-    }catch(e){
-      el.textContent = 'Error';
-      console.error('count fetch failed =>', e);
-    }
-  }
-
-  $('uploadForm').addEventListener('submit', async (e)=>{
+  const $ = id => document.getElementById(id);
+  $('f').addEventListener('submit', async (e)=>{
     e.preventDefault();
-    const status = $('status');
-    status.textContent = 'Preparing upload…';
+    const msg = $('msg');
+    msg.textContent = 'Uploading…';
 
-    const fileInput = $('file');
-    const file = fileInput.files[0];
-    if (!file){ status.innerHTML = '<div class="error">Please choose a file.</div>'; return; }
+    const file = $('file').files[0];
+    if (!file) { msg.textContent = 'Please choose a file.'; return; }
 
-    try{
-      // Optional quick size check (e.g., 50MB Apps Script limit-ish)
-      if (file.size > 45 * 1024 * 1024) {
-        status.innerHTML = '<div class="error">File is too large. Please upload a file under ~45MB.</div>';
-        return;
-      }
-
+    try {
       const fd = new FormData();
       fd.append('name', $('name').value.trim());
-      fd.append('class', $('class').value.trim());
-      fd.append('title', $('title').value.trim());
-      fd.append('description', $('description').value.trim());
-      fd.append('email', $('email').value.trim());
-      fd.append('consent', $('consent').checked ? 'true' : 'false');
-      // IMPORTANT: field name must be exactly 'file'
-      fd.append('file', file, file.name);
+      fd.append('file', file, file.name); // IMPORTANT: field name must be 'file'
 
-      // Debug (optional): see what we are sending
-      // for (const [k,v] of fd.entries()) console.log('FD:', k, v);
-
-      status.textContent = 'Uploading…';
-      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // do NOT set custom headers
+      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // no custom headers
       const txt = await r.text();
-      console.log('raw response:', txt);
-      let data;
-      try { data = JSON.parse(txt); } catch { throw new Error('Server returned non-JSON response'); }
+      let data; try { data = JSON.parse(txt); } catch { throw new Error('Server returned non-JSON'); }
       console.log('server response:', data);
 
-      if (data.ok){
-        const link = data.fileUrl ? `<div>File link: <a target="_blank" rel="noopener" href="${data.fileUrl}">Open</a></div>` : '';
-        status.innerHTML =
-          `<div class="success">Upload successful.</div>${link}`;
+      if (data.ok) {
+        msg.innerHTML = `✅ Uploaded. ${data.fileUrl ? `<a href="${data.fileUrl}" target="_blank" rel="noopener">Open file</a>` : ''}`;
         e.target.reset();
-        await refreshCount();
-        $('name').focus();
-      }else{
-        const diag = data.diag ? `<pre class="muted" style="white-space:pre-wrap;">${JSON.stringify(data.diag,null,2)}</pre>` : '';
-        status.innerHTML = `<div class="error">Upload failed: ${data.error || 'Unknown error'}</div>${diag}`;
+      } else {
+        msg.textContent = '❌ ' + (data.error || 'Upload failed');
       }
-    }catch(err){
-      status.innerHTML = `<div class="error">Error: ${err.message}</div>`;
+    } catch (err) {
+      msg.textContent = '❌ ' + err.message;
       console.error(err);
     }
   });
-
-  // initial load
-  refreshCount();
 </script>
 </body>
 </html>
